K8s Ingress Load Balancing/managed-certificate-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managed-certificate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managed-certificate-controller
  template:
    metadata:
      labels:
        app: managed-certificate-controller
    spec:
      serviceAccountName: managed-certificate-account
      containers:
        - name: managed-certificate-controller
          image: gcr.io/google-containers/managed-certificate-controller:v0.3.4
          imagePullPolicy: Always
          volumeMounts:
            - name: ssl-certs
              mountPath: "/etc/ssl/certs"
              readOnly: true
            - name: usrsharecacerts
              mountPath: "/usr/share/ca-certificates"
              readOnly: true
            - name: logfile
              mountPath: "/var/log/managed_certificate_controller.log"
              readOnly: false
      volumes:
        - name: ssl-certs
          hostPath:
            path: "/etc/ssl/certs"
        - name: usrsharecacerts
          hostPath:
            path: "/usr/share/ca-certificates"
        - name: logfile
          hostPath:
            path: "/var/log/managed_certificate_controller.log"
            type: FileOrCreate
